  firstOfMonth = today.withDayOfMonth(1);
  These methods are the immutable equivalent of set methods.
  These are convenince methods for the methods on the property API.

- DateTimeFormatter/DateTimeParserBucket
  If a parsed datetime is illegal due to field range or time zone offset
  transition, thrown exception includes text of datetime being parsed.


Compatibility with 1.2
----------------------
Binary compatible - Yes, except
  - InstantConverter and PartialConverter interfaces have had a new method added.
    These are mainly intended as internal interfaces and thus it is unlikely
    that you have implementations that will break. If you did create your own
    implementation and extended AbstractConverter then your code will not break.

Source compatible - Yes, except
  - InstantConverter and PartialConverter interfaces, see above

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006d


Deprecations since 1.2
----------------------
- Instant.toDateTimeISO
- Instant.toMutableDateTimeISO
    These were identical to the methods without the ISO suffix


Bug fixes since 1.2
-------------------
- DateTime/DateMidnight/MutableDateTime/AbstractInstant
   Conversion methods toDateTime, toDateTimeISO, toMutableDateTime, and
    toMutableDateTimeISO now preserve the time zone.
    Previously calling any of these four methods would convert the result to
    the default time zone. This was incorrect.
    The methods have been changed to preserve the time zone.
   The similarly named methods on Instant have not changed behaviour.

- Interval/MutableInterval.overlaps(ReadableInterval)
  Previously, this method didn't handle empty intervals correctly
  Now, an empty interval at the start of a larger interval does overlap

- DateTimeFormatterBuilder.MatchingParser
  Previously didn't estimate parsed length correctly

- YearMonthDay/TimeOfDay/Partial.Property
  Hashcode was not defined

- FixedDateTimeZone