@@ -82,7 +82,7 @@ import org.joda.time.ReadablePartial;
  * S       fraction of second           number        978
  *
  * z       time zone                    text          Pacific Standard Time; PST
- * Z       time zone offset/id          zone          -0800; -08:00; Asia/Tokyo
+ * Z       time zone offset/id          zone          -0800; -08:00; America/Los_Angeles
  *
  * '       escape for text              delimiter
  * ''      single quote                 literal       '
@@ -189,6 +189,29 @@ public class DateTimeFormat {
      */
     public static DateTimeFormatter forStyle(String style) {
         return createFormatterForStyle(style);
+    }
+
+    /**
+     * Returns the pattern used by a particular style and locale.
+     * <p>
+     * The first character is the date style, and the second character is the
+     * time style. Specify a character of 'S' for short style, 'M' for medium,
+     * 'L' for long, and 'F' for full.
+     * A date or time may be ommitted by specifying a style character '-'.
+     *
+     * @param style  two characters from the set {"S", "M", "L", "F", "-"}
+     * @param locale  locale to use, null means default
+     * @return the formatter
+     * @throws IllegalArgumentException if the style is invalid
+     * @since 1.3
+     */
+    public static String patternForStyle(String style, Locale locale) {
+        DateTimeFormatter formatter = createFormatterForStyle(style);
+        if (locale == null) {
+            locale = Locale.getDefault();
+        }
+        // Not pretty, but it works.
+        return ((StyleFormatter) formatter.getPrinter()).getPattern(locale);
     }
 
     //-----------------------------------------------------------------------
@@ -691,7 +714,7 @@ public class DateTimeFormat {
      * @return the formatter
      */
     private static DateTimeFormatter createFormatterForStyleIndex(int dateStyle, int timeStyle) {
-        int index = dateStyle * 5 + timeStyle;
+        int index = ((dateStyle << 2) + dateStyle) + timeStyle;
         DateTimeFormatter f = null;
         synchronized (cStyleCache) {
             f = cStyleCache[index];
@@ -803,7 +826,7 @@ public class DateTimeFormat {
             return f;
         }
 
-        private String getPattern(Locale locale) {
+        String getPattern(Locale locale) {
             DateFormat f = null;
             switch (iType) {
                 case DATE:
